Fix horizontal scroll on mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -177,7 +177,9 @@ body {
   height: 100%;
 }
 
-
+.containerPictureProfil {
+  padding: 2px;
+}
 .pictureProfil {
   height: 280px;
   text-align: center;
